fix i18n problem in html

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-device-selection-groups/osd-device-selection-groups.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-device-selection-groups/osd-device-selection-groups.component.html
@@ -1,7 +1,6 @@
 <!-- button -->
 <div class="form-group row">
-  <label i18n
-         class="col-sm-3 col-form-label"
+  <label class="col-sm-3 col-form-label"
          for="createDeleteButton">
     <ng-container i18n>{{ name }} devices</ng-container>
     <cd-helper>
