--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
@@ -38,8 +38,7 @@
           <!-- WAL slots -->
           <div class="form-group row"
                *ngIf="walDeviceSelectionGroups.devices.length !== 0">
-            <label i18n
-                   class="col-sm-3 col-form-label"
+            <label class="col-sm-3 col-form-label"
                    for="walSlots">
               <ng-container i18n>WAL Slots</ng-container>
               <cd-helper>
@@ -74,8 +73,7 @@
           <!-- DB slots -->
           <div class="form-group row"
                *ngIf="dbDeviceSelectionGroups.devices.length !== 0">
-            <label i18n
-                   class="col-sm-3 col-form-label"
+            <label class="col-sm-3 col-form-label"
                    for="dbSlots">
               <ng-container i18n>DB Slots</ng-container>
               <cd-helper>
