add preview form

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
@@ -123,7 +123,8 @@
       </div>
       <div class="card-footer">
         <div class="button-group text-right">
-          <cd-submit-button (submitAction)="submit()"
+          <cd-submit-button #previewButton
+                            (submitAction)="submit()"
                             i18n
                             [form]="formDir"
                             [disabled]="dataDeviceSelectionGroups.devices.length === 0">Preview</cd-submit-button>
