mgr/dashboard: support creating OSDs on spare devices
On OSD page, a form is added to allow creating OSDs from non-occupied
devices. User can:
- use filters to select some primary devices for OSD.
- use filters to select WAL/DB devices as shared devices if needed.

Note: This feature requires orchestrator support.

Frontend changes:
- Extract inventory devices component from inventory. We need to reuse
it.
- The inventory devices component supports column filters. The available
options for filters are determined by all possible values in a column.
- Add a button on OSD list page to display OSD creation form.
- Add OSD creation form, it allows selecting primary/WAL/DB devices for
OSDs.
- Add a preview modal to preview OSD creation. Currently, the Drive
Group Specification is displayed. This feature will be completed when we
have library to preview OSD creation.

Fixes: https://tracker.ceph.com/issues/40335

Signed-off-by: Kiefer Chang <kiefer.chang@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/hosts/host-details/host-details.component.html
@@ -12,7 +12,9 @@
   <tab i18n-heading
        heading="Services"
        *ngIf="permissions.hosts.read">
-    <cd-services [hostname]="selection.first()['hostname']">
+    <cd-services
+      [hostname]="selection.first()['hostname']"
+      [hiddenColumns]="['nodename']">
     </cd-services>
   </tab>
   <tab i18n-heading
