Fix import groups in typescript codes
Signed-off-by: Kiefer Chang <kiefer.chang@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
@@ -13,7 +13,7 @@
         [formGroup]="form"
         novalidate>
     <div class="card">
-      <div i18n
+      <div i18n="form title|Example: Create Pool@@formTitle"
            class="card-header">{{ action | titlecase }} {{ resource | upperFirst }}</div>
       <div class="card-body">
         <fieldset>
