--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-form/osd-form.component.html
@@ -46,7 +46,7 @@
                *ngIf="walDeviceSelectionGroups.devices.length !== 0">
             <label class="col-sm-3 col-form-label"
                    for="walSlots">
-              <ng-container i18n>WAL Slots</ng-container>
+              <ng-container i18n>WAL slots</ng-container>
               <cd-helper>
                 <span i18n>How many OSDs per WAL device.</span>
                 <br>
@@ -81,7 +81,7 @@
                *ngIf="dbDeviceSelectionGroups.devices.length !== 0">
             <label class="col-sm-3 col-form-label"
                    for="dbSlots">
-              <ng-container i18n>DB Slots</ng-container>
+              <ng-container i18n>DB slots</ng-container>
               <cd-helper>
                 <span i18n>How many OSDs per DB device.</span>
                 <br>
