--- a/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-devices-selection-modal/osd-devices-selection-modal.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/ceph/cluster/osd/osd-devices-selection-modal/osd-devices-selection-modal.component.html
@@ -10,7 +10,7 @@
         <div class="col-sm-12">
           <cd-inventory-devices [devices]="devices"
                                 [filterColumns]="filterColumns"
-                                [hiddenColumns]="['available']"
+                                [hiddenColumns]="['available', 'osd_ids']"
                                 (filterChange)="onFilterChange($event)">
           </cd-inventory-devices>
         </div>
